--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="css/foundation.css">
 </head>
 
 <body>
+   <!--
     <div>
         <h3>Light DOM</h3>
     </div>
@@ -12,9 +14,19 @@
         root.innerHTML = '<style>h3{ color: red; }</style>' +
             '<h3>Shadow DOM</h3>';
     </script>
+    -->
     <style>
-        .red {
-            color: red
+        :host {
+          opacity: 0.4;
+          transition: opacity 420ms ease-in-out;
+        }
+        :host(:hover) {
+          opacity: 1;
+        }
+        :host(:active) {
+          position: relative;
+          top: 3px;
+          left: 3px;
         }
     </style>
     <button class="red">My Button</button>
@@ -22,7 +34,9 @@
         var button = document.querySelector('button');
         var root = button.createShadowRoot();
         root.innerHTML = '<style>' +
-            ':host { text-transform: uppercase; }' +
+            ':host { opacity: 0.4;transition: opacity 420ms ease-in-out;}' +
+            ':host(:hover) { opacity: 1; }' +
+            ':host(:active) { position: relative;top: 3px;left: 3px; }' +
             '</style>' +
             '<content></content>';
     </script>
