--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" type="text/css" href="css/foundation.css">
 </head>
 
-<body>
+<body class="different">
+    <x-foo></x-foo>
    <!--
     <div>
         <h3>Light DOM</h3>
@@ -15,21 +16,7 @@
             '<h3>Shadow DOM</h3>';
     </script>
     -->
-    
-    <style>
-        :host {
-          opacity: 0.4;
-          transition: opacity 420ms ease-in-out;
-        }
-        :host(:hover) {
-          opacity: 1;
-        }
-        :host(:active) {
-          position: relative;
-          top: 3px;
-          left: 3px;
-        }
-    </style>
+    <!--
     <button class="red">My Button</button>
     <script>
         var button = document.querySelector('button');
@@ -40,6 +27,16 @@
             ':host(:active) { position: relative;top: 3px;left: 3px; }' +
             '</style>' +
             '<content></content>';
+    </script>
+-->
+
+    <script>
+        var body = document.querySelector('body');
+        var root = body.createShadowRoot();
+        root.innerHTML = '<style>' +
+            ':host-context(.different) {' +
+            ' background-color: red;height: 100px; width:100px}'
+            '</style>';
     </script>
 </body>
 
